# Robot_Manager_v2

./: README.md
andino_command/: CMakeLists.txt  package.xml
andino_command/include/andino_command/: andino_command.hpp
andino_command/launch/: andino_command_launchfile.launch.py
andino_command/src/: andino_command.cpp
andino_command/srv/: SaveMap.srv
andino_custom_interfaces/: CMakeLists.txt  package.xml
andino_custom_interfaces/srv/: SaveMap.srv
robot_manager_server/: CMakeLists.txt  package.xml
robot_manager_server/src/: api_handler.py  auth.py  db_handler.py  server.py  server_test.py
robot_manager_web_app/: index.html  package-lock.json  package.json
robot_manager_web_app/robot_manager/: package-lock.json  package.json
robot_manager_web_app/robot_manager/src/: index.css
robot_manager_web_app/robot_manager_web_app/: package-lock.json  package.json
robot_manager_web_app/robot_manager_web_app/src/: AutoMode.jsx  Camera.jsx  ManualJog.jsx  ManualMode.jsx  MapLIst.jsx  Mapa.jsx  Menu.jsx  PanelDeControl.jsx  RobotManagerApp.jsx  main.jsx  styles.css
robot_manager_web_app/src/: index.css  main.jsx
robot_manager_web_app/src/components/: AuthContext.jsx  AutoVisor.jsx  CameraVisor.jsx  ConfigVisor.jsx  Header.jsx  HomeVisor.jsx  MIssionVisor.jsx  ManAutoPanel.jsx  ManAutoVisor.jsx  ManVisor.jsx  MapList.jsx  MapVisor.jsx  Register.jsx  RobotVisor.jsx  WaypointVisor.jsx  sideBar.jsx
robot_manager_web_app/src/pages/: App.jsx  HomeSection.jsx  ManAutoSection.jsx  MapSection.jsx  MissionSection.jsx  (+3 more)
robot_manager_web_app_/: package-lock.json
(+16 files in other folders)
